url: "http://localhost:8081"
---
- runFlow: subflows/web-select-existing-mock-profile.yml
- tapOn: "Journal"
- waitForAnimationToEnd
- assertVisible: "(Dream Journey|Voyage onirique|Viaje on.rico)"
- assertVisible: "(Search your dream journey.*|Recherchez votre voyage onirique.*)"
- tapOn: "(Search your dream journey.*|Recherchez votre voyage onirique.*)"
- inputText: "Ocean"
- assertVisible: "Ocean of Stars"
- eraseText
- assertVisible: "The Infinite Library"
